SENTRY-986: Apply PMD plugin to Sentry source (Colm O hEigeartaigh via Lenni Kuff)
Change-Id: Ied167f439bdf9c3bdfea7853801ed4f21d7aaede